--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <body>
 
 <h1>Git Gud</h1>
-  <button>Click for free skill</button>
+  <h2>Not good at the game?</h2>
+  <h2>Cry yourself to sleep every night?</h2>
+  <h2>Maybe this inconspicuous button may help...</h2>
+  <button>Click for free skill!</button>
 
 </body>
 </html>
