--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <h2>Not good at the game?</h2>
   <h2>Cry yourself to sleep every night?</h2>
   <h2>Maybe this inconspicuous button may help...</h2>
-  <button>Click for free skill!</button>
+  <button type="button" onclick="alert('Paldies par kredītkartes informāciju! Beidzot varēšu atļauties Optima līnijas šņabi...')">Click for free skill!</button>
 
 </body>
 </html>
